--- a/archivist/src/main/resources/templates/fragments/analysts.html
+++ b/archivist/src/main/resources/templates/fragments/analysts.html
@@ -8,7 +8,7 @@
         <div class="navbar-inner">
             <div class="container-fluid">
                 <div class="navbar navbar-header">
-                    <a class="navbar-brand" href="/gui/analysts"><i class="fa fa-plug fa-fw fa-lg"/>Analysts</a>
+                    <a class="navbar-brand" href="/admin/gui/analysts"><i class="fa fa-plug fa-fw fa-lg"/>Analysts</a>
                     <p th:if="${an != null}" class="navbar-text navbar-section" th:text="${an.name}">...</p>
                 </div>
 
