--- a/archivist/src/main/resources/templates/fragments/assets.html
+++ b/archivist/src/main/resources/templates/fragments/assets.html
@@ -8,7 +8,7 @@
         <div class="navbar-inner">
             <div class="container-fluid">
                 <div class="navbar navbar-header">
-                    <a class="navbar-brand" href="/gui/assets"><i class="fa fa-file-image-o fa-fw fa-lg"/>Assets</a>
+                    <a class="navbar-brand" href="/admin/gui/assets"><i class="fa fa-file-image-o fa-fw fa-lg"/>Assets</a>
                 </div>
 
                 <div class="navbar-collapse collapse">
