--- a/archivist/src/main/resources/templates/fragments/filter.html
+++ b/archivist/src/main/resources/templates/fragments/filter.html
@@ -8,7 +8,7 @@
     <div class="navbar navbar-default navbar-fixed-left">
         <nav class="nav-sidebar">
             <div class="list-group">
-                <a th:href="${'/gui/filters/access'}" class="list-group-item">ACL Filter</a>
+                <a th:href="${'/admin/gui/filters/access'}" class="list-group-item">ACL Filter</a>
             </div>
         </nav>
     </div>
@@ -19,12 +19,12 @@
         <div class="navbar-inner">
             <div class="container-fluid">
                 <div class="navbar navbar-header">
-                    <a class="navbar-brand" href="/gui/filters"><i class="fa fa-filter fa-fw fa-lg"/>Filters</a>
+                    <a class="navbar-brand" href="/admin/gui/filters"><i class="fa fa-filter fa-fw fa-lg"/>Filters</a>
                 </div>
 
                 <div class="navbar-collapse collapse">
                     <div class="navbar navbar-right">
-                        <a href="/gui/filters/new" role="button" class="btn btn-danger navbar-btn"><i class="fa fa-plus fa-lg fa-fw" aria-hidden="true"></i></a>
+                        <a href="/admin/gui/filters/new" role="button" class="btn btn-danger navbar-btn"><i class="fa fa-plus fa-lg fa-fw" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
