--- a/archivist/src/main/resources/templates/fragments/logs.html
+++ b/archivist/src/main/resources/templates/fragments/logs.html
@@ -9,7 +9,7 @@
         <div class="navbar-inner">
             <div class="container-fluid">
                 <div class="navbar navbar-header">
-                    <a class="navbar-brand" href="/gui/logs"><i class="fa fa-history fa-fw fa-lg"/>Logs</a>
+                    <a class="navbar-brand" href="/admin/gui/logs"><i class="fa fa-history fa-fw fa-lg"/>Logs</a>
                 </div>
 
                 <div class="navbar-collapse collapse">
