--- a/archivist/src/main/resources/templates/layout.html
+++ b/archivist/src/main/resources/templates/layout.html
@@ -48,7 +48,7 @@
                 </button>
                 <a class="navbar-brand" href="/gui" style="padding-left: 1px">Archivist</a>
             </div>
-            <form class="navbar-form navbar-right" method="GET" action="/gui/assets" role="search">
+            <form class="navbar-form navbar-right" method="GET" action="/admin/gui/assets" role="search">
                 <div class="form-group">
                     <input name="query" type="text" class="form-control" placeholder="Search"/>
                 </div>
@@ -58,10 +58,10 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-gears fa-fw"/> <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/gui/users"><i class="fa fa-user fa-fw"/> Users</a></li>
-                        <li><a href="/gui/permissions"><i class="fa fa-lock fa-fw"/> Permissions</a></li>
-                        <li><a href="/gui/plugins"><i class="fa fa-plug fa-fw"/> Plugins</a></li>
-                        <li><a href="/gui/logs"><i class="fa fa-history fa-fw"/> Logs</a></li>
+                        <li><a href="/admin/gui/users"><i class="fa fa-user fa-fw"/> Users</a></li>
+                        <li><a href="/admin/gui/permissions"><i class="fa fa-lock fa-fw"/> Permissions</a></li>
+                        <li><a href="/admin/gui/plugins"><i class="fa fa-plug fa-fw"/> Plugins</a></li>
+                        <li><a href="/admin/gui/logs"><i class="fa fa-history fa-fw"/> Logs</a></li>
                     </ul>
                 </li>
             </ul>
@@ -69,11 +69,11 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-file-image-o fa-fw"/> <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/gui/assets"><i class="fa fa-file-image-o fa-fw"> Assets</i></a></li>
-                        <li><a href="/gui/folders"><i class="fa fa-folder fa-fw"></i> Folders</a></li>
-                        <li><a href="/gui/imports"><i class="fa fa-upload fa-fw"> Imports</i></a></li>
-                        <li><a href="/gui/exports"><i class="fa fa-download fa-fw"> Exports</i></a></li>
-                        <li><a href="/gui/pipelines"><i class="fa fa-cogs fa-fw"> Pipelines</i></a></li>
+                        <li><a href="/admin/gui/assets"><i class="fa fa-file-image-o fa-fw"> Assets</i></a></li>
+                        <li><a href="/admin/gui/folders"><i class="fa fa-folder fa-fw"></i> Folders</a></li>
+                        <li><a href="/admin/gui/imports"><i class="fa fa-upload fa-fw"> Imports</i></a></li>
+                        <li><a href="/admin/gui/exports"><i class="fa fa-download fa-fw"> Exports</i></a></li>
+                        <li><a href="/admin/gui/pipelines"><i class="fa fa-cogs fa-fw"> Pipelines</i></a></li>
                     </ul>
                 </li>
             </ul>
