--- a/archivist/src/main/resources/templates/overview.html
+++ b/archivist/src/main/resources/templates/overview.html
@@ -23,7 +23,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="/gui/assets">
+                <a href="/admin/gui/assets">
                     <div class="panel-footer">
                         <span class="pull-left">Search</span>
                         <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -45,7 +45,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="/gui/folders">
+                <a href="/admin/gui/folders">
                     <div class="panel-footer">
                         <span class="pull-left">View Details</span>
                         <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -67,7 +67,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="/gui/users">
+                <a href="/admin/gui/users">
                     <div class="panel-footer">
                         <span class="pull-left">View Details</span>
                         <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -89,7 +89,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="/gui/analysts">
+                <a href="/admin/gui/analysts">
                     <div class="panel-footer">
                         <span class="pull-left">View Details</span>
                         <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
