--- a/archivist/src/main/resources/templates/fragments/folders.html
+++ b/archivist/src/main/resources/templates/fragments/folders.html
@@ -8,11 +8,11 @@
         <div class="navbar-inner">
             <div class="container-fluid">
                 <div class="navbar navbar-header">
-                    <a class="navbar-brand" href="/gui/folders"><i class="fa fa-folder fa-fw fa-lg"/>Folders</a>
+                    <a class="navbar-brand" href="/admin/gui/folders"><i class="fa fa-folder fa-fw fa-lg"/>Folders</a>
                     <th:block th:if="${folder != null &amp;&amp; folder.id &gt; 0}">
                         <p class="navbar-section navbar-text">
                         <th:block th:each="folder: ${path}">
-                            <a th:if="${folder.id &gt; 0}" class="navbar-link" th:href="${'/gui/folders/' + folder.id}"
+                            <a th:if="${folder.id &gt; 0}" class="navbar-link" th:href="${'/admin/gui/folders/' + folder.id}"
                                th:text="${folder.name}"></a>&nbsp;/
                         </th:block>
                         </p>
@@ -52,7 +52,7 @@
                     <h4 class="modal-title">Create Folder</h4>
                 </div>
                 <div class="modal-body">
-                    <form id="createForm" autocomplete="off" action="#" role="form" th:action="@{/gui/folders/__${folder.id}__}" th:object="${folderSpec}" method="post">
+                    <form id="createForm" autocomplete="off" action="#" role="form" th:action="@{/admin/gui/folders/__${folder.id}__}" th:object="${folderSpec}" method="post">
                         <div class="form-group">
                             <label for="name">Name:</label>
                             <input type="text" th:field="*{name}" class="form-control" id="name" name="name" required="true"/>
