--- a/archivist/src/main/resources/templates/fragments/plugins.html
+++ b/archivist/src/main/resources/templates/fragments/plugins.html
@@ -8,9 +8,9 @@
         <div class="navbar-inner">
         <div class="container-fluid">
             <div class="navbar navbar-header">
-                <a class="navbar-brand" href="/gui/plugins"><i class="fa fa-plug fa-fw fa-lg"/>Plugins</a>
+                <a class="navbar-brand" href="/admin/gui/plugins"><i class="fa fa-plug fa-fw fa-lg"/>Plugins</a>
                 <p class="navbar-section navbar-text">
-                <a th:href="${'/gui/plugins/' + plugin.id}" th:if="${plugin != null}" class="navbar-link" th:text="${plugin.name + ' v' + plugin.version}">...</a>
+                <a th:href="${'/admin/gui/plugins/' + plugin.id}" th:if="${plugin != null}" class="navbar-link" th:text="${plugin.name + ' v' + plugin.version}">...</a>
                 <a href="#" th:if="${processor != null}" class="navbar-link" th:text="${' / ' + processor.name}">...</a>
                 </p>
             </div>
