--- a/archivist/src/main/resources/templates/ingest.html
+++ b/archivist/src/main/resources/templates/ingest.html
@@ -18,7 +18,7 @@
         </nav>
     <div class="container col-sm-8">
 
-        <form id="ingestUpdateBuilder" autocomplete="off" action="#" role="form" th:action="@{/gui/ingests/__${ingest.id}__}" th:object="${ingestUpdateBuilder}" method="post">
+        <form id="ingestUpdateBuilder" autocomplete="off" action="#" role="form" th:action="@{/admin/gui/ingests/__${ingest.id}__}" th:object="${ingestUpdateBuilder}" method="post">
             <div th:if="${#fields.hasGlobalErrors()}">
                 <p th:each="err : ${#fields.globalErrors()}" th:text="${err}">...</p>
             </div>
@@ -53,7 +53,7 @@
                 <button type="submit" class="btn btn-default">
                     <span class="glyphicon glyphicon-save"></span> Save
                 </button>
-                <a href="/gui/ingests" class="btn btn-default">
+                <a href="/admin/gui/ingests" class="btn btn-default">
                     <span class="glyphicon glyphicon-arrow-left"></span> Cancel
                 </a>
             </div>
