Partial commit of docker execution system.
Cluster communication had to be moved into its own project so a ZpsRun cool could be build that
could talk back to archivist from within docker.

--- a/archivist/src/main/resources/templates/fragments/job.html
+++ b/archivist/src/main/resources/templates/fragments/job.html
@@ -131,7 +131,7 @@ $(function() {
         if (job == null) { return ;}
 
         if (option == "li-view") {
-            location.href="/admin/admin/admin/admin/admin/gui/" + job[0] + "/" + job[1];
+            location.href="/admin/gui/" + job[0] + "/" + job[1];
         }
         else if (option == "li-cancel") {
             cancelJob(job);
