archivist: fixes admin gui link in admin page

--- a/archivist/src/main/resources/templates/layout.html
+++ b/archivist/src/main/resources/templates/layout.html
@@ -46,7 +46,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/gui" style="padding-left: 1px">Archivist</a>
+                <a class="navbar-brand" href="/admin/gui" style="padding-left: 1px">Archivist</a>
             </div>
             <form class="navbar-form navbar-right" method="GET" action="/admin/gui/assets" role="search">
                 <div class="form-group">
