--- a/archivist/src/main/resources/templates/fragments/folders.html
+++ b/archivist/src/main/resources/templates/fragments/folders.html
@@ -9,10 +9,10 @@
             <div class="container-fluid">
                 <div class="navbar navbar-header">
                     <a class="navbar-brand" href="/admin/gui/folders"><i class="fa fa-folder fa-fw fa-lg"/>Folders</a>
-                    <th:block th:if="${folder != null &amp;&amp; folder.id &gt; 0}">
+                    <th:block th:if="${folder != null &amp;&amp; folder.parentId != null}">
                         <p class="navbar-section navbar-text">
                         <th:block th:each="folder: ${path}">
-                            <a th:if="${folder.id &gt; 0}" class="navbar-link" th:href="${'/admin/gui/folders/' + folder.id}"
+                            <a th:if="${folder.parentId != null}" class="navbar-link" th:href="${'/admin/gui/folders/' + folder.id}"
                                th:text="${folder.name}"></a>&nbsp;/
                         </th:block>
                         </p>
@@ -22,7 +22,7 @@
                 <div class="navbar-collapse collapse">
                     <div class="navbar navbar-right">
 
-                        <th:block th:if="${folder != null &amp;&amp; folder.id &gt; 0 &amp;&amp; folder.dyhiId == null}">
+                        <th:block th:if="${folder != null &amp;&amp; folder.parentId != null &amp;&amp; folder.dyhiId == null}">
                         <button onclick="$('#dyhiModalCreate').modal({'backdrop': 'static'});"
                                 type="button" class="btn btn-danger navbar-btn"><i class="fa fa-flash fa-fw fa-lg" aria-hidden="true"/></button>
                         </th:block>
