archivist: fixes admins email

--- a/archivist/src/main/resources/templates/user.html
+++ b/archivist/src/main/resources/templates/user.html
@@ -24,7 +24,7 @@
                     <strong>Profile Updated</strong>
                 </div>
 
-                <form id="userProfileForm" autocomplete="off" action="#" role="form" th:action="@{/gui/users/__${user.id}__}" th:object="${userProfileForm}" method="post">
+                <form id="userProfileForm" autocomplete="off" action="#" role="form" th:action="@{/admin/gui/users/__${user.id}__}" th:object="${userProfileForm}" method="post">
 
                     <div class="form-group">
                         <label for="firstName">First Name:</label>
